kubernetes/apps/observability/kube-promethus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-external
  namespace: monitoring
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - alertmanager.dovis.me
  rules:
    - backendRefs:
        - name: alertmanager-operated
          port: 9093

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-internal
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - alertmanager.dovis.me
  rules:
    - backendRefs:
        - name: alertmanager-operated
          port: 9093

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-internal
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - prometheus.dovis.me
  rules:
    - backendRefs:
        - name: prometheus-operated
          port: 9093
